src/scss/phy/elements.scss
@import '../common/elements.scss';

.dropdown {
  .dropdown-toggle::after {
    border: none;
    position: relative;
    vertical-align: middle;
    margin-left: 0.35rem;
    @include svg-icon('/assets/phy/icons/redesign/chevron-down.svg', 16px, 16px);
    transform: rotate3d(1, 0, 0, 0deg);
    transition: transform 0.21s ease-in-out;
  }

  &.show .dropdown-toggle::after {
    transform: rotate3d(1, 0, 0, 180deg);
  }
}

.isaac-accordion .accordion-button::after {
  @include svg-icon('/assets/phy/icons/redesign/chevron-down.svg', 16px, 16px);
}

details.teacher-notes {
  margin-bottom: 1rem;
  color: var(--color-neutral-900);
  summary {
    display: flex;
    align-items: center;
    position: relative;
    width: max-content;
    padding: 0.5rem 1rem;
    background-color: var(--color-misc-pale-yellow);
    border: 2px solid var(--color-neutral-900);
    border-radius: 6px;
    z-index: 1;
    
    &::marker {
      content: '';
    }

    &::after {
      content: "";
      display: inline-block;
      background: url('/assets/phy/icons/redesign/chevron-down.svg') no-repeat center center;
      height: 16px;
      width: 16px;
      margin-left: 8px;
      transform: rotate(-90deg);
      transition: transform 0.1s ease-in-out;
    }
  }

  > div {
    padding: 1.5rem 2rem;
    background-color: var(--color-misc-pale-yellow);
    border: 2px solid var(--color-neutral-900);
    border-radius: 6px;
    border-top-left-radius: 0;
    transform: translateY(-2px); // would prefer margin-top, but safari keeps rendering the top 2px in spite of any CSS blocking it
  }

  &[open] summary {
    border-bottom: 0;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;

    &::after {
      transform: rotate(0deg);
    }
  }
}

.ada-overview-page {
  position: relative;
  overflow: hidden;
  &::before {
    content: '';
    position: absolute;
    width: 400px;
    height: 800px;
    rotate: 60deg;
    bottom: -400px;
    right: -200px;
    background: url("/assets/cs/decor/fingerprint-stage-slice.svg") no-repeat bottom right;
    background-size: contain;
    opacity: 0.4;
  }

  ul {
    list-style-image: unset;
  }
}

.pill-tag-outline {
  @include pill-tag(var(--color-neutral-600), var(--color-neutral-white), var(--color-neutral-900));
}

.warning-tag {
  @include pill-tag(var(--color-neutral-white), $color-misc-orange-500, $color-misc-orange-500);
  padding: 0.03rem 0.6rem;
}

.tab-picker {
  @include tab-picker(left, 2px, var(--subject-color-100));
}

.theme-preview {
  background: none;
  color: inherit;

  > img {
    outline: 2px solid transparent;
    outline-offset: 4px;
    border-radius: 12px;
    transition: border-color 0.1s ease-in-out;
  }

  &.active > img {
    outline: 2px solid var(--border-medium);
  }
}

